[tool.poetry]
name = "pollify"
version = "0.0.1"
description = "Telegram bot for Pollify service"
authors = ["Igor Tolmachov <me@igorek.dev>"]
license = "AGPL-3.0-only"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
aiogram = "^2.25.1"
aiohttp = "^3.8.4"
websockets = "^11.0.1"
yarl = "^1.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.isort]
profile = "black"
filter_files = true
skip = ["__init__.py"]
